# RDPMgr

./: ChangeLog  Makefile  Makefile.am  NEWS  README.md  TODO  build.sh  config.h  config.h.in  config.status  configuration.cpp  configuration.h  configure.in  corbaInterfaces.cpp  corbaInterfaces.h  debug.cpp  debug.h  globals.h  locks.h  logConfigurationMgr.h  main.cpp  message.h  messagesMgr.h  mutexMgr.h  process.cpp  process.h  rdpmgr.conf  remoteServersSetManagementImpl.cpp  singleton.cpp  singleton.h  version.c  xwindowMngt.cpp  xwindowMngt.h
